<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.18">
  <GVL Name="GVL_Motor" Id="{8ded2be3-72f2-4213-9223-57e7e250d32d}">
    <Declaration><![CDATA[//{attribute 'qualified_only'}
VAR_GLOBAL
	GVL_DUT_TC_AP240ACPower					: DUT_Cylinder;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>